Bug 136344: added type casts to allow compilation with a C++ compiler. The patch is contributed by Nick Blievers <nickb@adacel.com.au>.