nsprpub/pr/src/misc/prinit.c
@@ -562,7 +562,7 @@ PR_ProcessAttrSetCurrentDirectory(
     const char *dir)
 {
     PR_FREEIF(attr->currentDirectory);
-    attr->currentDirectory = PR_MALLOC(strlen(dir) + 1);
+    attr->currentDirectory = (char *) PR_MALLOC(strlen(dir) + 1);
     if (!attr->currentDirectory) {
         PR_SetError(PR_OUT_OF_MEMORY_ERROR, 0);
         return PR_FAILURE;
